--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^2.4.4",
-    "pixi": "^0.3.1"
+    "phaser": "^2.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
