--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
-    "webpack": "^1.12.11"
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "scripts": {
+    "serve": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors"
   }
 }
