--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A simple space game",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors --config webpack.config.js --inline"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "phaser": "^2.4.4"
   },
   "devDependencies": {
@@ -16,8 +17,5 @@
     "babel-loader": "^6.2.1",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
-  },
-  "scripts": {
-    "serve": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors"
   }
 }
