--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "express": "^4.13.4",
     "http-proxy": "^1.12.0",
-    "webpack": "^1.12.11",
     "path": "^0.12.7",
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
-    "phaser": "^2.4.4"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "webpack": "^1.12.11"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-react": "^6.5.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
